opam-version: "2.0"
name: "iso-filesystem"
version: "0.1"
maintainer: "opam-devel@lists.ocaml.org"
authors: [ "Jon Ludlam" ]
license: "ISC"
homepage: "https://github.com/jonludlam/ocaml-iso-filesystem"
dev-repo: "git+https://github.com/jonludlam/ocaml-iso-filesystem.git"
bug-reports: "https://github.com/jonludlam/ocaml-iso-filesystem/issues"
synopsis: "ISO9660 filesystem library for OCaml"

build: ["dune" "build"]
install: ["dune" "install"]
remove: [
  ["ocamlfind" "remove" "iso-filesystem"]
]
depends: [
  "cstruct"
  "io-page" {build}
  "lwt"
  "mirage-block-unix" {build}
  "mirage-types"
  "ocamlfind" {build}
  "ounit" {build}
  "re"
  "stringext"
]
